_sass/academic/_layout.scss
/* ... */
/**
 * Site footer
 */

.site-footer {
  @include size(vsmall);
  border-top: 1px solid $grey-color-light;
  color: $grey-color;

  a {
    color: $grey-color;
    text-decoration: none;
  }

  .footer-col {
    list-style: none;
    margin-left: 0;
    margin-top: $spacing-unit/2;
    margin-bottom: $spacing-unit;

    .author, .author a {
      color: $grey-color-light;
    }
  }

  .footer-col-1 {
    width: -webkit-calc(70% - (#{$spacing-unit} / 2));
    width:         calc(70% - (#{$spacing-unit} / 2));
    float: left;
  }

  .footer-col-2 {
    width: -webkit-calc(25% - (#{$spacing-unit} / 2));
    width:         calc(25% - (#{$spacing-unit} / 2));
    float: right;
  }

  .single-col {
    clear: both;
    list-style: none;
    margin: 0;
    text-align: center;

    li {
      display: inline-block;
      margin-left: 5px;
      margin-right: 5px;
    }

    .username {
      display: none;
    }

    svg {
      width: 20px;
      height: 20px;
    }

    .icon {
      &:hover {
        circle,
        path:last-of-type {
          fill: $text-color;
        }
      }
    }
  }

  .nav-list-title,
  .contact-list-title {
    display: none;
  }

  .contact-list {
    a {
      text-decoration: none;
    }
    a .username:hover {
      text-decoration: underline;
    }
    a .username:visited {
      text-decoration: none;
    }

    @include media-query($on-palm) {
      margin-bottom: $spacing-unit / 2;
    }
  }

  .bottom {
    color: $grey-color-light;
    width: 100%;
    clear: both;
    float: none;
    text-align: center;
    margin-top: $spacing-unit;
    margin-bottom: $spacing-unit;

    @include media-query($on-palm) {
      margin-top: 0px;
    }

    a {
      color: $grey-color-light;
    }

    .cc-licence {
      text-transform: uppercase;
    }

    .lang-selector {
      display: inline-block;
      list-style: none;
      color: $grey-color;
      margin: $spacing-unit / 4 0 0 0;
      padding: 10px;

      @include media-query($on-palm) {
        text-align: left;
        padding-left: 0px;
        margin: 0px 0px $spacing-unit/2 0px;

        .lang-intro {
          font-weight: bold;
        }
      }

      .lang {
        display: inline-block;
        text-transform: lowercase;

        a {
          color: $grey-color;
        }

        &:nth-child(n+3) {
          &:before {
            content:"|"
          }
        }
      }
    }
  }

}

@include media-query($on-laptop) {
  .site-footer {
    @include size(small);
  }
}

@include media-query($on-palm) {
  .site-footer {
    .footer-col-1,
    .footer-col-2 {
      width:100%;
      float: none;
    }

    .nav-list-title,
    .contact-list-title {
      display: inline;
      font-weight: bold;
    }

    .nav-list {
      margin-top: 0;
    }

    .contact-list {
      text-align: left;
      margin-top: 0;

      li {
        display: block;
      }

      .username {
        display: inline;
      }
    }

    .bottom {
      text-align: left;
    }
  }

}

/**
 * Page content
 */
.page-content {
  padding: $spacing-unit 0 $spacing-unit / 2 0;
}

.post-content {
  padding-bottom: $spacing-unit;
}

.page-heading {
  margin-top: 0;
}

.pitch {
  h2:first-of-type {
    margin-top: 0;
  }
}

.archive {
  margin-top: $spacing-unit;
}

.post-list {
  margin-left: 0;
  list-style: none;

  .last-update {
    display: none;
    color: $grey-color-light;
    a {
      color: $grey-color-light;
    }
  }

  > li {
    margin-bottom: $spacing-unit;

    &:hover .last-update {
      display: inline-block;
    }
  }

  .post-link {
    &:hover {
      text-decoration: none;
    }
  }

  .post-meta {
    font-size: $small-font-size;
    font-family: $alt-font-family;
    font-weight: 200;
    color: $grey-color;
  }

  .post-thumbnail-wrapper {
    width: 100%;
    max-height: 200px;
    overflow-y: hidden;
    margin-top: $spacing-unit / 4;
    margin-bottom: $spacing-unit / 4;
  }

  .post-thumbnail {
    margin-top: -20%;
  }
}

/**
 * Posts
 */

.post-header {
  position: relative;
  width: 100vw;
  left: calc(-50vw + 50%);
  margin-bottom: $spacing-unit;
  overflow-y: hidden;

  @include media-query($on-laptop) {
    .post-meta {
      margin-bottom: $spacing-unit / 6;
    }
  }

  .last-update {
    color: $grey-color;
    a { color: inherit }
  }

  .post-thumbnail {
    position: absolute;
    z-index: -1;
    min-height: 100%;

    @include media-query($on-palm) {
      position: relative;
      width: 100%;
    }
  }

  .wrapper {
    background: rgba(255, 255, 255, 0.9);
    margin-top: $spacing-unit;
    padding-bottom: 0;
    padding-top: 0;

    @include media-query($on-laptop) {
      margin-top: $spacing-unit / 1.5;
    }

  }
}

.with-thumbnail {
  @include media-query($on-laptop) {
    margin-bottom: $spacing-unit / 2;
  }

  @include media-query($on-palm) {
    margin-bottom: 0;
  }

  .wrapper {
    padding-bottom: $spacing-unit / 2;
    padding-top: $spacing-unit / 2;
    margin-bottom: $spacing-unit;

    @include media-query($on-palm) {
      margin: 0px;
    }
  }
}

.post-title {
  margin-top: 0;
  color: $brand-color;
}

.post-summary {
  margin-top: 0;
}

.post-content {
  padding-bottom: $spacing-unit / 2;

  .footnotes {
    @include size(small);
    margin-top: $spacing-unit / 6;
    padding-top: $spacing-unit / 2;

    @include media-query($on-laptop) {
      p {
        margin-bottom: $spacing-unit / 4;
      }
    }

    @include media-query($on-palm) {
      margin-top: 0;
    }

    hr {
      margin-top: 0;
    }
  }
}

.post-author {
  @include size(vsmall);
  padding: 5%;
  margin-top: $spacing-unit / 2;

  .user-picture {
    float: left;
    width: 20%;
    margin-right: 5%;
  }

  .user-info {
    width: 75%;
    list-style: none;
  }

  .user-shortbio {
    color: grey;
  }
}

.colored-block {
  @include size(small);
  background: $grey-color-lighter;
  padding: 5%;
}

/**
 * About
 */

.about-col-wrapper {
  @extend %clearfix;
}
/* ... */

